<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="steps"
            type="com.hilbing.bakingapp.model.Step" />
    </data>

<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_image_height_land"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_video_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_image_height_land"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_no_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_video_available"
        android:visibility="gone"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_size_title"
        android:background="@color/primary_text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_description_step_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/recipe_name_padding"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_label"/>

    <Button
        android:id="@+id/btn_previous_step"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="177dp"
        android:layout_marginBottom="16dp"
        android:text="@string/previous_step"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_step_detail" />

    <Button
        android:id="@+id/btn_next_step"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/next"
        android:text="@string/next_step"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_step_detail" />

    <TextView
        android:id="@+id/tv_description_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="244dp"
        android:text="@string/step_description"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_view" />



</android.support.constraint.ConstraintLayout>


</layout>